--- a/WebApplication4/WebApplication4/Views/ReporteVentas/Index.cshtml
+++ b/WebApplication4/WebApplication4/Views/ReporteVentas/Index.cshtml
@@ -271,7 +271,7 @@
                                             DateTime di2 = (DateTime)Session["FechaRI3"];
                                             DateTime df2 = (DateTime)Session["FechaRF3"];
                                             <div>
-                                                <h3>Reporte de Ventas por Vendedor del @di2.Date.ToString("dd/MM/yyyy") - @df2.Date.ToString("dd/MM/yyyy")</h3>
+                                                <h3>Reporte de Ventas por Eventos del @di2.Date.ToString("dd/MM/yyyy") - @df2.Date.ToString("dd/MM/yyyy")</h3>
                                             </div>
                                         }
                                         <table class="table table-bordered table-hover" align="center">
