--- a/WebApplication4/WebApplication4/Views/CuentaUsuario/ReporteCliente.cshtml
+++ b/WebApplication4/WebApplication4/Views/CuentaUsuario/ReporteCliente.cshtml
@@ -26,7 +26,7 @@
     <div class="row">
         <div class="col-md-11">
             
-            @if (TempData["ListaPU"] != null)
+            @if (Session["ListaPU"] != null)
             {
                 <input id="btnExport" type="button" class="btn btn-primary" value="Exportar Excel">
             }
@@ -36,7 +36,18 @@
         </div>
     </div><br>
 
-    @using (Html.BeginForm("ReporteCliente", "CuentaUsuario", FormMethod.Post, new { }))
+    <div class="row">
+        <label for="inPoints" class="control-label col-md-2">Puntaje minimo: </label>
+        <div class="col-md-2">
+            <input id="min-points" name="inPoints" type="number" class="form-control" value="" />
+        </div>
+        <div class="col-md-2">
+            <input id="search-client" type="button" onclick="reporte()" class="btn btn-primary" value="Buscar Clientes">
+        </div>
+    </div><br>
+
+
+    @*@using (Html.BeginForm("ReporteCliente", "CuentaUsuario", FormMethod.Post, new { }))
     {
         @Html.AntiForgeryToken()
 
@@ -57,13 +68,13 @@
                 </div>
             </div>
         </div>
-    }
+    }*@
 
     <br>
 
-    @if (TempData["ListaPU"] != null)
+    @if (Session["ListaPU"] != null)
     {
-        listaCliente = (List<WebApplication4.Models.CuentaUsuario>)TempData["ListaPU"];
+        listaCliente = (List<WebApplication4.Models.CuentaUsuario>)Session["ListaPU"];
         <div id="dvData" class="row">
             <div>
                 <h3>Reporte de Clientes @DateTime.Now.Date.ToString("dd/MM/yyyy")</h3>
@@ -98,6 +109,39 @@
         </div>
     }
 </div>
+
+<script>
+    function reporte() {
+        var fd = $('#min-points').val();
+        if (fd != null && fd != "") {
+            $.ajax({
+                url: "@Url.Action("ReporteC", "CuentaUsuario")",
+                data: {fd:fd},
+            success: function (data) {
+                alert(data);
+                window.location.href = '/CuentaUsuario/ReporteCliente';
+            },
+            error: function (data) {
+                alert(data);
+                window.location.href = '/CuentaUsuario/ReporteCliente';
+            }
+        });
+    } else {
+            $.ajax({
+                url: "@Url.Action("LimpiaR", "CuentaUsuario")",
+        data: {},
+    success: function () {
+        window.location.href = '/CuentaUsuario/ReporteCliente';
+    },
+    error: function (data) {
+        alert(data);
+        window.location.href = '/CuentaUsuario/ReporteCliente';
+    }
+    });
+    }
+    }
+
+</script>
 
 <script src="http://code.jquery.com/jquery-1.9.1.js"></script>
 <script type="text/javascript">
