--- a/WebApplication4/WebApplication4/Views/Evento/BusquedaPaging.cshtml
+++ b/WebApplication4/WebApplication4/Views/Evento/BusquedaPaging.cshtml
@@ -23,7 +23,7 @@
 
                 <div class="col-md-2 col-sm-4 col-xs-6">
                     <div class="thumbnail">
-                        <img onclick="verEvento()" class="event" src="@evento.ImagenDestacado" alt="">
+                        <img onclick="verEvento()" class="event" src="@evento.ImagenEvento" alt="">
                         <div class="caption" style="text-align:center">
                             <div class="row">@evento.nombre</div>
                             <div class="row">@evento.fecha_inicio</div>
