--- a/WebApplication4/WebApplication4/Views/Evento/VerEvento.cshtml
+++ b/WebApplication4/WebApplication4/Views/Evento/VerEvento.cshtml
@@ -61,7 +61,7 @@
             <div class="col-md-3">
                 <div id="fila" class="row">
                     <div class="thumbnail">
-                        <img class="event" src=@ViewBag.evento.ImagenDestacado alt=@ViewBag.evento.nombre>
+                        <img class="event" src=@ViewBag.evento.ImagenEvento alt=@ViewBag.evento.nombre>
                         <div class="caption" style="text-align:left">
                             <h4>@ViewBag.evento.nombre</h4>
                             <p><strong><u>Fechas:</u></strong> Del @(((DateTime)ViewBag.evento.fecha_inicio).ToShortDateString()) al @(((DateTime)ViewBag.evento.fecha_fin).ToShortDateString())</p>
