--- a/WebApplication4/WebApplication4/Views/Home/Index.cshtml
+++ b/WebApplication4/WebApplication4/Views/Home/Index.cshtml
@@ -63,7 +63,7 @@
                             <div class="col-md-3 col-sm-6 col-xs-12 bloque-imagen">
                                 <div class="thumbnail">
                                     <a href=@Url.Action("VerEvento", "Evento", new { id = evento.codigo })>
-                                        <img  height="58px" class="event" src="@evento.ImagenDestacado" alt="">
+                                        <img  height="58px" class="event" src="@evento.ImagenEvento" alt="">
                                     </a>
                                     <div class="caption" style="text-align:center">
                                         @{
