Devolucion, model.funcion con nuevos campos

--- a/WebApplication4/WebApplication4/Views/Ventas/VerDetalle.cshtml
+++ b/WebApplication4/WebApplication4/Views/Ventas/VerDetalle.cshtml
@@ -63,7 +63,7 @@
     }
     else//POSTERGADO
     {
-        if (DateTime.Compare(today, (DateTime)funcion.FechaDevolucion) <= 0)
+        if (DateTime.Compare(today, (DateTime)funcion.fecha) <= 0)
         {
             sePuedeDev = 1; 
         }
