cambios Ver Evento

--- a/WebApplication4/WebApplication4/Views/Evento/VerEvento.cshtml
+++ b/WebApplication4/WebApplication4/Views/Evento/VerEvento.cshtml
@@ -64,7 +64,7 @@
                         <img class="event" src=@ViewBag.evento.ImagenEvento alt=@ViewBag.evento.nombre>
                         <div class="caption" style="text-align:left">
                             <h4>@ViewBag.evento.nombre</h4>
-                            <p><strong><u>Fechas:</u></strong> Del @(((DateTime)ViewBag.evento.fecha_inicio).ToShortDateString()) al @(((DateTime)ViewBag.evento.fecha_fin).ToShortDateString())</p>
+                            <p><strong><u>Fechas:</u></strong> @ViewBag.textoFunciones </p>
                             <p>
                                 <strong><u>Dirección:</u></strong>
                                 @{
