--- a/WebApplication4/WebApplication4/Views/Local/Index.cshtml
+++ b/WebApplication4/WebApplication4/Views/Local/Index.cshtml
@@ -54,7 +54,7 @@
         </div>
 
         <div class="col-md-1">
-            <a class="btn btn-danger pull-right" href="@Url.Action("Index2", "Home")">Salir <span class="glyphicon glyphicon-log-out"></span></a>
+            @*<a class="btn btn-danger pull-right" href="@Url.Action("Index2", "Home")">Salir <span class="glyphicon glyphicon-log-out"></span></a>*@
         </div>
 
     </div>
