--- a/WebApplication4/WebApplication4/Views/Account/IndexEmpleado.cshtml
+++ b/WebApplication4/WebApplication4/Views/Account/IndexEmpleado.cshtml
@@ -44,7 +44,7 @@
                         </form>
                     </div>
                     <div class="col-md-2">
-                        <a class="btn btn-danger pull-right" href="@Url.Action("Index2", "Home")">Salir <span class="glyphicon glyphicon-log-out"></span></a>
+                        @*<a class="btn btn-danger pull-right" href="@Url.Action("Index2", "Home")">Salir <span class="glyphicon glyphicon-log-out"></span></a>*@
                     </div>
 
                 </div>
@@ -146,7 +146,7 @@
                         </form>
                     </div>
                     <div class="col-md-2">
-                        <a class="btn btn-danger pull-right" href="@Url.Action("Index2", "Home")">Salir <span class="glyphicon glyphicon-log-out"></span></a>
+                        @*<a class="btn btn-danger pull-right" href="@Url.Action("Index2", "Home")">Salir <span class="glyphicon glyphicon-log-out"></span></a>*@
                     </div>
 
                 </div>
