--- a/WebApplication4/WebApplication4/Views/CuentaUsuario/Asignacion.cshtml
+++ b/WebApplication4/WebApplication4/Views/CuentaUsuario/Asignacion.cshtml
@@ -45,7 +45,7 @@
             </div>*@
 
         <div>
-            <a href="@Url.Action("Index2", "Home")" class="btn btn-danger pull-right" data-dismiss="modal" aria-hidden="true">Salir <span class="glyphicon glyphicon-log-out"></span> </a><br>
+            @*<a href="@Url.Action("Index2", "Home")" class="btn btn-danger pull-right" data-dismiss="modal" aria-hidden="true">Salir <span class="glyphicon glyphicon-log-out"></span> </a>*@<br>
         </div>
 
     </div><br>
