--- a/WebApplication4/WebApplication4/Views/CuentaUsuario/BuscaCliente.cshtml
+++ b/WebApplication4/WebApplication4/Views/CuentaUsuario/BuscaCliente.cshtml
@@ -51,7 +51,7 @@
             </div>
         </div>
         <div class="col-md-3">
-            <a href="@Url.Action("Index2", "Home")" class="btn btn-danger pull-right">Salir <span class="glyphicon glyphicon-log-out"></span></a>
+            @*<a href="@Url.Action("Index2", "Home")" class="btn btn-danger pull-right">Salir <span class="glyphicon glyphicon-log-out"></span></a>*@
         </div>
 
     </div>
