--- a/WebApplication4/WebApplication4/Views/CuentaUsuario/Politicas.cshtml
+++ b/WebApplication4/WebApplication4/Views/CuentaUsuario/Politicas.cshtml
@@ -46,7 +46,7 @@
             <div class="row">
                 <div class="container">
                     <br>
-                    <a href="@Url.Action("Index2", "Home")" class="btn btn-danger pull-right">Salir <span class="glyphicon glyphicon-log-out"></span></a>
+                    @*<a href="@Url.Action("Index2", "Home")" class="btn btn-danger pull-right">Salir <span class="glyphicon glyphicon-log-out"></span></a>*@
                 </div>
             </div>
             <!--PRIMAERA PESTAÑA-->
