--- a/WebApplication4/WebApplication4/Views/CuentaUsuario/ReporteAsignacion.cshtml
+++ b/WebApplication4/WebApplication4/Views/CuentaUsuario/ReporteAsignacion.cshtml
@@ -20,7 +20,7 @@
 
 <div class="container">
     <div class="row">
-        <a class="btn btn-danger pull-right" href=@Url.Action("Index2", "Home")>Salir <span class="glyphicon glyphicon-log-out"></span></a>
+        @*<a class="btn btn-danger pull-right" href=@Url.Action("Index2", "Home")>Salir <span class="glyphicon glyphicon-log-out"></span></a>*@
     </div>
     <div id="busqAvanzada" class="row" style="text-align:center">
        
