--- a/WebApplication4/WebApplication4/Views/Organizador/Index.cshtml
+++ b/WebApplication4/WebApplication4/Views/Organizador/Index.cshtml
@@ -50,7 +50,7 @@
             <div class="col-md-2">
                 <br>
                 <br>
-                <a class="btn btn-danger pull-right" href="@Url.Action("Index2", "Home")">Salir <span class="glyphicon glyphicon-log-out"></span></a>
+                @*<a class="btn btn-danger pull-right" href="@Url.Action("Index2", "Home")">Salir <span class="glyphicon glyphicon-log-out"></span></a>*@
             </div>
 
         </div>
