--- a/WebApplication4/WebApplication4/Views/TipoDeCambio/Index.cshtml
+++ b/WebApplication4/WebApplication4/Views/TipoDeCambio/Index.cshtml
@@ -20,7 +20,7 @@
     <div class="row">
         <div class="col-md-12">
             <br>
-            <a href="@Url.Action("Index2", "Home")" class="btn btn-danger pull-right">Salir <span class="glyphicon glyphicon-log-out"></span></a>
+            @*<a href="@Url.Action("Index2", "Home")" class="btn btn-danger pull-right">Salir <span class="glyphicon glyphicon-log-out"></span></a>*@
         </div>
     </div>
 
