--- a/WebApplication4/WebApplication4/Views/Ventas/Apertura.cshtml
+++ b/WebApplication4/WebApplication4/Views/Ventas/Apertura.cshtml
@@ -76,7 +76,7 @@
             {
                 @*<button type="button" class="btn btn-primary" onclick="">Abrir caja <span class="glyphicon glyphicon-inbox"></span></button>*@
             }
-            <a class="btn btn-danger pull-right" href="@Url.Action("Index2", "Home")">Salir <span class="glyphicon glyphicon-log-out"></span></a>
+            @*<a class="btn btn-danger pull-right" href="@Url.Action("Index2", "Home")">Salir <span class="glyphicon glyphicon-log-out"></span></a>*@
         </center>
 
 
