--- a/WebApplication4/WebApplication4/Views/Ventas/ReporteDia.cshtml
+++ b/WebApplication4/WebApplication4/Views/Ventas/ReporteDia.cshtml
@@ -81,7 +81,7 @@
 </div>
 <div class="container">
     <div class="row">
-        <a class="btn btn-danger pull-right" href="@Url.Action("Index2", "Home")">Salir <span class="glyphicon glyphicon-log-out"></span></a>
+        @*<a class="btn btn-danger pull-right" href="@Url.Action("Index2", "Home")">Salir <span class="glyphicon glyphicon-log-out"></span></a>*@
     </div>
     <div class="row">
         <div class="col-md-1">
