--- a/WebApplication4/WebApplication4/Views/CuentaUsuario/MiCuenta.cshtml
+++ b/WebApplication4/WebApplication4/Views/CuentaUsuario/MiCuenta.cshtml
@@ -19,7 +19,8 @@
                     <li><a href="@Url.Action("MisReservas", "CuentaUsuario")">Ver mis reservas</a>
                     <li><a href="@Url.Action("MisCompras", "CuentaUsuario")">Ver mis Compras</a>
                     <li><a href="@Url.Action("MiCarrito","CuentaUsuario")">Ver carrito</a>
-                </ol>
+                    <li><a href="@Url.Action("VerRegalos","CuentaUsuario")">Ver Regalos</a>
+</ol>
             </form>
         </div>
         <div class="col-md-3">
