ver Evento , sitios

--- a/WebApplication4/WebApplication4/Views/Evento/ExtrasEvento.cshtml
+++ b/WebApplication4/WebApplication4/Views/Evento/ExtrasEvento.cshtml
@@ -112,6 +112,14 @@
                 </div>
             </div>
 
+
+            <div class="row">
+                <div class="form-group">
+                    @Html.LabelFor(m => m.tieneSitios, new { @class = "control-label col-md-2" })
+                    @Html.CheckBoxFor(m => m.tieneSitios)
+                </div>
+            </div>
+
             <div class="row">
                 <div class="form-group">
                     @Html.LabelFor(m => m.ImageSitios, new { @class = "control-label col-md-2" })
