--- a/WebApplication4/WebApplication4/Views/Evento/Index.cshtml
+++ b/WebApplication4/WebApplication4/Views/Evento/Index.cshtml
@@ -40,7 +40,8 @@
                 <a class="btn btn-primary" onclick="redirigePromocion()">Agregar Promoción <span class="glyphicon glyphicon-tags"></span></a>
                 <a class="btn btn-warning" onclick="redirigePostergar()">Postergar <span class="glyphicon glyphicon-calendar"></span></a>
                 <a class="btn btn-warning" onclick="redirigeCancelar()">Cancelar <span class="glyphicon glyphicon-remove-sign"></span></a>
-               @if( User.IsInRole("Promotor") ){
+               @if (User.IsInRole("Promotor") || User.IsInRole("Administrador"))
+               {
                 <a class="btn btn-success" onclick="redirigeReservaOrganizador()">Reserva Organizador<span class="glyphicon glyphicon-flag"> </a>
                 <a class="btn btn-success" onclick="redirigeVerReservaOrganizador()"> Ver Reserva Organizador </a>
                 }
